<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/navigation_my_work_logs"
        android:icon="@drawable/ic_work_logs"
        android:title="@string/nav_my_work_logs" />
    <item
        android:id="@+id/navigation_pending"
        android:icon="@drawable/ic_pending"
        android:title="@string/nav_pending" />
    <item
        android:id="@+id/navigation_completed"
        android:icon="@drawable/ic_completed"
        android:title="@string/nav_completed" />
    <item
        android:id="@+id/navigation_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/nav_archive" />
</menu>
